    backend. 'global_file' backend functions are provided by 'local_file'
    backend.
  - Sanitized nickname and name entries in address listing.
  - LDAP backend will use internal squirrelmail charset conversion functions
    instead of php xml extension. Closes bug #655137.
  - Fix two time zone calculation bugs, thanks to David White

Version 1.4.3a - 2 June 2004
----------------------------
  - Fix typo in compose.php reply/reply to all quoting (#963499).

Version 1.4.3 - 30 May 2004
---------------------------
  - Fix form functions default parameter.
  - Disabled Korean extra functions, because they don't provide all required
    options and message composition is broken.
  - Added Basque translation support.
  - Fixed XSS vulnarability in content-type display in the attachment area
    of read_body.php discovered by Roman Medina.

Version 1.4.3-RC1 - 10 May 2004
-------------------------------
  - Added new preference that determines cursor focus when replying.
  - HTML Filter bugfixes and further strengthening in response to some
    findings reported by stardust.
  - Display total number of new messages in newmail-plugin popup window.
  - Disabled Vietnamese and Ukrainian translations. They are done in different
    language.
  - Ported charset decoding support functions from SM head. Increases
    number of readable charsets.
  - Fix SquirrelMail to work with PHP5.
  - Reintroduce alternating row colors in addressbook, which has
    accidentally disappeared somewhere in the dark past.
  - Disabled Quick-email-reporting feature in spamcop plugin. (#809452). Admin
    can enable it by setting variable in plugins/spamcop/setup.php
  - Fix again for Internet Explorer's stupidity of decoding characters, then
    executing it blindly. See http://www.securityfocus.com/archive/1/340118.
  - Replaced obsolete 2mbit.com RBL with ahbl.org RBL (#829887).
  - Fixed sorting of sent_subfolders.
    Sent_subfolder plugin is hooked to special_mailbox hook.